Implement new deployment mechanism to support multiple environment
