# common/model/src/main/java/org/hpcclab/oaas/model/pkg/OPackage.java
@@ -20,5 +20,6 @@ public class OPackage {
   @JsonSetter(nulls = Nulls.AS_EMPTY)
   List<OFunction> functions = List.of();
   List<String> required;
+  List<OClassDeployment> deployments;
   boolean disabled;
 }
