# package-manager/src/main/java/org/hpcclab/oaas/pm/rest/FunctionResource.java
@@ -1,7 +1,6 @@
 package org.hpcclab.oaas.pm.rest;
 
 import com.fasterxml.jackson.annotation.JsonView;
-import io.smallrye.common.annotation.RunOnVirtualThread;
 import io.smallrye.mutiny.Uni;
 import jakarta.enterprise.context.RequestScoped;
 import jakarta.inject.Inject;
@@ -11,7 +10,6 @@ import org.hpcclab.oaas.model.Pagination;
 import org.hpcclab.oaas.model.Views;
 import org.hpcclab.oaas.model.function.OFunction;
 import org.hpcclab.oaas.repository.FunctionRepository;
-import org.hpcclab.oaas.repository.PackageDeployer;
 import org.jboss.resteasy.reactive.RestQuery;
 
 @RequestScoped
@@ -21,8 +19,6 @@ import org.jboss.resteasy.reactive.RestQuery;
 public class FunctionResource {
   @Inject
   FunctionRepository funcRepo;
-  @Inject
-  PackageDeployer packageDeployer;
 
   @GET
   @JsonView(Views.Public.class)
@@ -43,17 +39,5 @@ public class FunctionResource {
   public Uni<OFunction> get(String funcKey) {
     return funcRepo.async().getAsync(funcKey)
       .onItem().ifNull().failWith(NotFoundException::new);
-  }
-
-  @DELETE
-  @Path("{funcKey}")
-  @JsonView(Views.Public.class)
-  @RunOnVirtualThread
-  public OFunction delete(String funcKey) {
-    OFunction removed = funcRepo.remove(funcKey);
-    if (removed == null)
-      throw new NotFoundException();
-    packageDeployer.detach(removed);
-    return removed;
   }
 }
